已完成拆分。
主要改动：
- [LuceneMcpSearchService.java](D:/IdeaProjects/LangChain4j-AIChat/Langchain4j-Chatchat/chatchat-mcp-server/src/main/java/com/chatchat/mcpserver/search/LuceneMcpSearchService.java:52)：资产索引从统一 `assets` 改为 typed index：`assets-ssh-host`、`assets-sql-datasource`、`assets-http-endpoint`、`assets-api-service`。
- [McpAssetLuceneIndexService.java](D:/IdeaProjects/LangChain4j-AIChat/Langchain4j-Chatchat/chatchat-mcp-server/src/main/java/com/chatchat/mcpserver/search/McpAssetLuceneIndexService.java:95)：刷新时分别重建服务/API、数据库、HTTP 各自索引，不再混合写入。
- [AssetDiscoveryMcpToolPublisher.java](D:/IdeaProjects/LangChain4j-AIChat/Langchain4j-Chatchat/chatchat-mcp-server/src/main/java/com/chatchat/mcpserver/routing/AssetDiscoveryMcpToolPublisher.java:207)：`ssh_asset_query`、`database_asset_search`、`http_endpoint_asset_query` 的元数据标明各自 `physicalIndex`。
- [ApiAssetDiscoveryMcpToolPublisher.java](D:/IdeaProjects/LangChain4j-AIChat/Langchain4j-Chatchat/chatchat-mcp-server/src/main/java/com/chatchat/mcpserver/api/ApiAssetDiscoveryMcpToolPublisher.java:218)：`api_asset_query` 也接入自己的 `assets-api-service` 索引，保留原有 registry 打分兜底。
- [LuceneMcpSearchServiceTest.java](D:/IdeaProjects/LangChain4j-AIChat/Langchain4j-Chatchat/chatchat-mcp-server/src/test/java/com/chatchat/mcpserver/search/LuceneMcpSearchServiceTest.java:171)：新增隔离测试，验证清空一个资产类型索引不会影响另一个类型。

验证通过：

```powershell
mvn -pl chatchat-mcp-server -am "-Dtest=LuceneMcpSearchServiceTest,ApiAssetDiscoveryMcpToolPublisherTest,AssetDiscoveryMcpToolPublisherTest" "-Dsurefire.failIfNoSpecifiedTests=false" test
```

结果：`Tests run: 13, Failures: 0, Errors: 0`。